# holyeval

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  USAGE.md  create-db.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.next/: trace  trace-build
.pikiclaw/skills/add-benchmark/: SKILL.md
.pikiclaw/skills/add-eval-agent/: SKILL.md
.pikiclaw/skills/add-target-agent/: SKILL.md
.pikiclaw/skills/eslbench-report-analysis/: SKILL.md
.pikiclaw/skills/quick-start/: SKILL.md
.pikiclaw/skills/review-architecture/: SKILL.md
.pikiclaw/skills/run-benchmark/: SKILL.md
.pikiclaw/skills/run-e2e-test/: SKILL.md
benchmark/: __init__.py  basic_runner.py  kg_qa_reeval.py  pyproject.toml
benchmark/data/: __init__.py
benchmark/data/agentclinic/: medqa.jsonl  metadata.json  nejm.jsonl
benchmark/data/dialogue_quality/: README.md  core.jsonl  l2_core.jsonl  l2_hard.jsonl  metadata.json  smoke.jsonl
benchmark/data/eslbench/: eslbench.jsonl  full-20260324.jsonl  full_sample.jsonl  metadata.json  sample50-20260324.jsonl  sample50-20260331.jsonl  sample500-20260331.jsonl
benchmark/data/eslbench/tools/: ablation_generator.py  conv_eval.sh  gen_eslbench_jsonl.sh  hf_uploader.py  retrieve.py
benchmark/data/healthbench/: metadata.json  sample.jsonl
benchmark/data/history_demo/: metadata.json  sample.jsonl
benchmark/data/medcalc/: metadata.json  sample.jsonl
benchmark/data/medhall/: metadata.json
benchmark/data/memoryarena/: ma_travel_sample.jsonl  metadata.json  sample.jsonl
benchmark/data/virtual_user/: layer2_explore.jsonl  layer2_gt.jsonl  layer2_insight.jsonl  metadata.json  round1.jsonl  round2.jsonl
benchmark/tests/: __init__.py  test_basic_runner.py  test_bench_schema.py
docs/: ablation_eval_summary.md  architecture.md  batch_eslbench_20260324_194411.json  batch_eslbench_20260325_034049.json  cross_eval_thetagen_sampling_20260313_182808.md  cross_eval_thetagen_sampling_20260316_110639.md  eslbench_sample50-20260324_comparison.md  medhall_comparison_20260310.md  medhall_comparison_20260311.md
docs/plans/: 2026-03-17-appium-integration-design.md  2026-03-17-appium-integration.md  2026-03-19-memory-leak-fix.md  2026-03-23-mem0-target-agent.md  2026-03-25-evermem-target-agent.md
docs/superpowers/plans/: 2026-04-09-dialogue-quality-l2-hard.md  2026-04-09-dialogue-quality-l2.md  2026-04-13-virtual-user-opening-test.md
docs/superpowers/specs/: 2026-04-09-dialogue-quality-l2-design.md  2026-04-09-dialogue-quality-l2-hard-design.md  2026-04-13-virtual-user-opening-test-design.md
evaluator/: __init__.py  pyproject.toml
evaluator/core/: __init__.py  bench_schema.py  orchestrator.py  schema.py
evaluator/core/interfaces/: __init__.py  abstract_eval_agent.py  abstract_target_agent.py  abstract_test_agent.py
evaluator/plugin/: __init__.py
evaluator/plugin/eval_agent/: __init__.py  dialogue_quality_eval_agent.py  engagement_eval_agent.py  hallucination_eval_agent.py  healthbench_eval_agent.py  keyword_eval_agent.py  kg_qa_eval_agent.py  medcalc_eval_agent.py  memoryarena_eval_agent.py  preset_answer_eval_agent.py  record_retrieval_eval_agent.py  redteam_compliance_eval_agent.py  semantic_eval_agent.py
evaluator/plugin/target_agent/: __init__.py  dyg_rag_api_target_agent.py  evermem_target_agent.py  hermes_target_agent.py  hippo_rag_api_target_agent.py  llm_api_target_agent.py  mem0_rag_api_target_agent.py  naive_rag_api_target_agent.py
evaluator/plugin/test_agent/: __init__.py  auto_test_agent.py  manual_test_agent.py
evaluator/tests/: test_auto_test_agent.py  test_benchmark_reader.py  test_checkpoint.py  test_data_flow.py  test_e2e.py  test_eval_only.py  test_llm.py  test_manual_test_agent.py  test_preset_answer_eval.py  test_report_reader.py
evaluator/tests/fixtures/: test_cases.jsonl
evaluator/tests/fixtures/cases/: headache_basic_llm_test.json  headache_basic_test.json  indicator_exercise_test.json  indicator_sleep_test.json  quality_empathy_anxiety_001.json  quality_safety_emergency_001.json  semantic_active_user_test.json  semantic_full_demo.json  semantic_investor_demo_test.json  theta_api_demo_test.json  theta_api_sleep_consultation.json  user_profiles.md
evaluator/utils/: __init__.py  agent_inspector.py  benchmark_reader.py  checkpoint.py  config.py  evermemos_client.py  hermes_setup.py  live_files.py  llm.py  report_reader.py  result_renderer.py  task_registry.py  thetagen_chunker.py
generator/: __init__.py  pyproject.toml
generator/agentclinic/: converter.py
generator/eslbench/: converter.py  prepare_data.py  prepare_hippo_cache.py
generator/healthbench/: __init__.py  converter.py
generator/medcalc/: __init__.py  converter.py
generator/medhall/: converter.py  data_gen.py  enrich_ground_truth.py  ground_truth_builder.py  raw_data.jsonl
generator/memoryarena/: converter.py
generator/virtual_user/: __init__.py  __main__.py  analyzer.py  case_gen.py  openings.json  profile_gen.py  profiles.jsonl
web/: __init__.py  __main__.py  pyproject.toml
web/app/: main.py
web/app/api/: agents.py  benchmarks.py  guides.py  reports.py  tasks.py
web/app/models/: responses.py
web/app/services/: agent_inspector.py  benchmark_reader.py  prepare_manager.py  report_reader.py  task_manager.py
web/guides/: develop-eval-agent.md  develop-target-agent.md  e2e-test.md  generate-benchmark.md  overview.md  run-benchmark.md
web/static/css/: style.css
web/templates/: base.html
web/templates/agents/: eval.html  index.html  target.html  test.html
web/templates/benchmarks/: detail.html  index.html
web/templates/guides/: detail.html
web/templates/partials/: case_detail.html  cost_estimate.html  cost_pricing.html  cost_utils.html  tag_stats.html
web/templates/reports/: detail.html
web/templates/tasks/: detail.html  index.html
web/templates/virtual_users/: index.html
web/tests/: conftest.py  test_api_agents.py  test_api_benchmarks.py  test_api_guides.py  test_api_reports.py  test_api_tasks.py  test_task_manager.py
