[project]
name = "holyeval-benchmark"
version = "0.1.0"
description = "HolyEval 评测指标定义"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.4",
    "holyeval-evaluator",
    "jmespath>=1.1.0",
    "orjson>=3.11.7",
]

[tool.uv.sources]
holyeval-evaluator = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[tool.hatch.build.targets.wheel.sources]
".." = ""
