[project]
name = "holyeval-evaluator"
version = "0.1.0"
description = "HolyEval 评测执行引擎"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langchain>=1.2",
    "langchain-openai>=1.1",
    "langchain-google-genai>=4.2",
    "click>=8.0",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "cryptography>=44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evaluator"]

[tool.hatch.build.targets.wheel.sources]
".." = ""
