[project]
name = "holyeval-generator"
version = "0.1.0"
description = "HolyEval 评测用例生成器"
requires-python = ">=3.11"
dependencies = [
    "holyeval-evaluator",
    "holyeval-benchmark",
    "duckdb>=1.4.4",
    "huggingface-hub>=0.20",
]

[tool.uv.sources]
holyeval-evaluator = { workspace = true }
holyeval-benchmark = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[tool.hatch.build.targets.wheel.sources]
".." = ""
