[project]
name = "holyeval-web"
version = "0.1.0"
description = "HolyEval Web UI 管理界面"
requires-python = ">=3.11"
dependencies = [
    "holyeval-evaluator",
    "holyeval-benchmark",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]

[tool.uv.sources]
holyeval-evaluator = { workspace = true }
holyeval-benchmark = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web"]

[tool.hatch.build.targets.wheel.sources]
".." = ""
